--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<html>
+  <title> My chess tactics </title>
+  <h2> THe basic rules of chess 
+  </h2>
+  <p> Here is a list of the rules that we are going to cover. 
+  </p> 
+  
