--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
   </h2>
   <p> Here is a list of the rules that we are going to cover. 
   </p> 
-  
+  <ol>
+    <li> Scewers </li>
+    <li> Pins </li>
+    <li> Mysterious Attack </li> 
