--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@
     <li> Scewers </li>
     <li> Pins </li>
     <li> Mysterious Attack </li> 
+    &copy;
+    Chess is 100 percent &gt; then anything else &lt; 
