--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
     <li> Scewers </li>
     <li> Pins </li>
     <li> Mysterious Attack </li> 
-    &copy;
-    Chess is 100 percent &gt; then anything else &lt; 
+    Chess is 100 percent &nbsp; &gt; then anything &nbsp; else &lt; 
+      &copy;
