--- a/index.html
+++ b/index.html
@@ -9,4 +9,14 @@
     <li> Pins </li>
     <li> Mysterious Attack </li> 
     Chess is 100 percent &nbsp; &gt; then anything &nbsp; else &lt; 
-      &copy;
+      Harsh Sheth 2021 &copy;
+   <section> 
+     </ol> 
+    <li> section 1 </li>
+    <li> section 2 </li> 
+    <li> section 3 </li> 
+    <li> section 4 </li> 
+    <li> section 5 </li> 
+    <li> section 6 </li> 
+    </section> 
+    <!-- I will add the info to each section for this website later --> 
