--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <li> Pins </li>
     <li> Mysterious Attack </li> 
     Chess is 100 percent &nbsp; &gt; then anything &nbsp; else &lt; 
-      Harsh Sheth 2021 &copy;
+      
+  
    <section> 
      </ol> 
     <li> section 1 </li>
@@ -20,3 +21,4 @@
     <li> section 6 </li> 
     </section> 
     <!-- I will add the info to each section for this website later --> 
+    <br> Harsh Sheth 2021 &copy;
